Fixed Logo text size on smaller mobile screen and made the hamburger and regular about dropdown close after clicking a link

--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,7 @@ h2::after {
 
   /* Optional: slightly smaller logo on mobile for breathing room */
   .logo-text {
-    font-size: clamp(1.6rem, 5vw, 2.2rem);
+    font-size: clamp(1.8rem, 5vw, 2.6rem);
   }
 }
 
@@ -178,8 +178,8 @@ h2::after {
 
 /* Mobile – tighter but still beautiful */
 @media (max-width: 960px) {
-  .logo-text {
-    font-size: clamp(1.8rem, 6vw, 2.4rem);
+  .topbar .logo-text {
+    font-size: clamp(2.3rem, 6.8vw, 2.9rem);
   }
 
   .logo-num {
@@ -189,6 +189,20 @@ h2::after {
   .logo-yachting {
     margin-left: 10px;
     font-size: 0.85em;
+  }
+}
+
+@media (max-width: 430px) {
+  .topbar .logo-text {
+    font-size: 2.4rem;
+    letter-spacing: 1.2px;
+  }
+}
+
+@media (max-width: 430px) {
+  .topbar .logo-text {
+    font-size: 2.4rem;
+    letter-spacing: 1.2px;
   }
 }
 
@@ -853,7 +867,7 @@ header.topbar {
   }
 
   .hero-content h1 {
-    font-size: clamp(2.4rem, 7vw, 4rem);   /* prevents massive text */
+    font-size: clamp(2.4rem, 7vw, 4rem); /* prevents massive text */
     line-height: 1.15;
   }
 }
@@ -1874,5 +1888,88 @@ footer {
     font-size: 32px;
     bottom: 20px;
     right: 20px;
+  }
+}
+
+/* Mobile Override */
+@media (max-width: 960px) {
+  .topbar-inner {
+    position: relative;
+    justify-content: center;
+  }
+
+  .topbar .logo-text {
+    font-size: 3rem;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  .hamburger {
+    position: absolute;
+    right: 5%;
+  }
+}
+
+@media (max-width: 560px) {
+  .topbar .logo-text {
+    font-size: 2.4rem;
+    letter-spacing: 1.4px;
+  }
+  .hamburger {
+    position: absolute;
+    right: 4%;
+  }
+
+  .btn-hero-green {
+    padding: 10px 20px;
+    border-radius: 25px;
+  }
+
+  .btn-hero-red {
+    padding: 10px 20px;
+    border-radius: 25px;
+  }
+}
+
+@media (max-width: 430px) {
+  .topbar .logo-text {
+    font-size: 2.2rem;
+    letter-spacing: 1.4px;
+  }
+  .hamburger {
+    position: absolute;
+    right: 4%;
+  }
+
+  .btn-hero-green {
+    padding: 10px 20px;
+    border-radius: 25px;
+  }
+
+  .btn-hero-red {
+    padding: 10px 20px;
+    border-radius: 25px;
+  }
+}
+
+@media (max-width: 375px) {
+  .topbar .logo-text {
+    font-size: 2rem;
+    margin-left: 0px;
+  }
+
+  .hamburger {
+    position: absolute;
+    right: 4%;
+  }
+
+  .btn-hero-green {
+    padding: 10px 20px;
+    border-radius: 25px;
+  }
+
+  .btn-hero-red {
+    padding: 10px 20px;
+    border-radius: 25px;
   }
 }
